examples/test/testpolicy15759.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15759
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key45: value10
      key40: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value5
          key48: value24
          key34: value16
      podSelector:
        matchLabels:
          key1: value35
